--- a/Determinante.ipynb
+++ b/Determinante.ipynb
@@ -6,7 +6,7 @@
       "name": "Determinante.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOUAYI0lsVEBU7wR6qqtIV6",
+      "authorship_tag": "ABX9TyMH3/+GOLeiSuV6xQ0s9ha7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "# Determinante\n",
         "Se n = 1, $det(a) = (A)_{i, j}$\n",
         "\n",
-        "Senão, $$\\sum\\limits_{j = 1} ^ {n} (-1)^{(-1 + j)} (A)_{1, j} det(T_{1, j})$$\n"
+        "Senão, $\\sum\\limits_{j = 1} ^ {n} (-1)^{(-1 + j)} (A)_{1, j} det(T_{1, j})$\n"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "\n",
         "  return submtx"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "\n",
         "  return sum"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "    ]\n",
         "print(f'> {det(a)}')"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
